--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -44,7 +44,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - garage.deuxfleurs.fr
+  - garage.dimedis.io
   resources:
   - garageclusters
   verbs:
@@ -56,13 +56,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - garage.deuxfleurs.fr
+  - garage.dimedis.io
   resources:
   - garageclusters/finalizers
   verbs:
   - update
 - apiGroups:
-  - garage.deuxfleurs.fr
+  - garage.dimedis.io
   resources:
   - garageclusters/status
   verbs:
