[controller] refactor: Simplify config and improve secret handling
Key changes:

- Implemented proper secret management
  * RPC secret now stored in Kubernetes Secret instead of CR spec
  * Secret mounted with mode 0400 to satisfy Garage security requirements
  * Secret persisted across reconciliations and scaling operations

- Simplified ConfigMap architecture
  * Changed from per-pod ConfigMaps to single shared ConfigMap
  * Removed init-container (no longer needed for pod-specific config)
  * Config mounted directly to /etc/garage.toml (standard path)
  * Added rpc_secret_file instead of inline rpc_secret

- Enhanced RBAC for Kubernetes Discovery
  * Added ClusterRole/ClusterRoleBinding for Garage pods
  * Granted permissions for CRD management (apiextensions.k8s.io)
  * Granted permissions for garagenodes.deuxfleurs.fr resources
  * Operator can now delegate CRD permissions to Garage ServiceAccount

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -8,6 +8,7 @@ rules:
   - ""
   resources:
   - configmaps
+  - secrets
   - serviceaccounts
   - services
   verbs:
@@ -34,9 +35,31 @@ rules:
   verbs:
   - create
 - apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - create
+  - get
+  - list
+  - patch
+  - watch
+- apiGroups:
   - apps
   resources:
   - statefulsets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - deuxfleurs.fr
+  resources:
+  - garagenodes
   verbs:
   - create
   - delete
@@ -74,6 +97,8 @@ rules:
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
+  - clusterrolebindings
+  - clusterroles
   - rolebindings
   - roles
   verbs:
