[layout] feat: configure simple layout
- each replica has it's own zone

--- a/config/crd/bases/garage.dimedis.io_garageclusters.yaml
+++ b/config/crd/bases/garage.dimedis.io_garageclusters.yaml
@@ -297,6 +297,7 @@ spec:
                 enum:
                 - Pending
                 - Deploying
+                - LayoutConfiguring
                 - Ready
                 - Failed
                 type: string
