[bucket] feat: initial version of GarageBucket CRD
- testing ongoing, may have bugs

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,6 +3,7 @@
 # It should be run by config/default
 resources:
   - bases/garage.dimedis.io_garageclusters.yaml
+  - bases/garage.dimedis.io_garagebuckets.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 # patches:
