[layout] feat: new mode zoneFromNodeLabel
- with this mode the Garage zone is derived
  from a node label instead of using one
  zone per node derived from its sequence
  number

--- a/kind/infra/yaml/cluster.yaml
+++ b/kind/infra/yaml/cluster.yaml
@@ -29,21 +29,29 @@ nodes:
       - hostPath: .ssl/root-ca.pem
         containerPath: /opt/ca-certificates/root-ca.pem
         readOnly: true
+    labels:
+      topology.kubernetes.io/zone: dc1
   - role: worker
     image: kindest/node:v1.34.0
     extraMounts:
       - hostPath: .ssl/root-ca.pem
         containerPath: /opt/ca-certificates/root-ca.pem
         readOnly: true
+    labels:
+      topology.kubernetes.io/zone: dc2
   - role: worker
     image: kindest/node:v1.34.0
     extraMounts:
       - hostPath: .ssl/root-ca.pem
         containerPath: /opt/ca-certificates/root-ca.pem
         readOnly: true
+    labels:
+      topology.kubernetes.io/zone: dc1
   - role: worker
     image: kindest/node:v1.34.0
     extraMounts:
       - hostPath: .ssl/root-ca.pem
         containerPath: /opt/ca-certificates/root-ca.pem
         readOnly: true
+    labels:
+      topology.kubernetes.io/zone: dc2
