--- a/config/crd/bases/garage.dimedis.io_garageclusters.yaml
+++ b/config/crd/bases/garage.dimedis.io_garageclusters.yaml
@@ -105,6 +105,26 @@ spec:
                         type: string
                     type: object
                 type: object
+              layout:
+                description: Layout configuration for zone assignment
+                properties:
+                  mode:
+                    default: zonePerNode
+                    description: |-
+                      Mode determines how zones are assigned to nodes
+                      - zonePerNode: Each replica gets its own zone (z1, z2, z3, ...)
+                      - zoneFromNodeLabel: Zones are determined from node labels
+                    enum:
+                    - zonePerNode
+                    - zoneFromNodeLabel
+                    type: string
+                  zoneNodeLabel:
+                    default: topology.kubernetes.io/zone
+                    description: |-
+                      ZoneNodeLabel specifies the node label to use for zone assignment
+                      Only used when mode is zoneFromNodeLabel
+                    type: string
+                type: object
               persistence:
                 description: Persistence configuration for data and metadata volumes
                 properties:
@@ -226,6 +246,11 @@ spec:
           status:
             description: GarageClusterStatus defines the observed state of GarageCluster
             properties:
+              appliedLayoutMode:
+                description: |-
+                  AppliedLayoutMode is the layout mode that was applied during initial cluster setup
+                  This field is set once and cannot be changed to prevent inconsistent cluster states
+                type: string
               conditions:
                 description: Conditions represent the latest available observations
                 items:
