--- a/config/samples/garage_v1alpha1_garagecluster.yaml
+++ b/config/samples/garage_v1alpha1_garagecluster.yaml
@@ -36,6 +36,13 @@ spec:
       size: "1Gi"
       # storageClass: "fast-ssd"
 
+  # Optional: Layout configuration
+  # Default mode is zonePerNode, which assigns each replica to its own zone (z1, z2, z3, ...)
+  # Uncomment to use node labels for zone assignment:
+  # layout:
+  #   mode: zoneFromNodeLabel
+  #   zoneNodeLabel: "topology.kubernetes.io/zone"
+
   # Optional: S3 API configuration
   s3Api:
     enabled: true
