[statefulset] feat: add image config to CRD
- reconcile on image changes
- reconcile on ConfigMap changes (using hash)

--- a/config/crd/bases/garage.dimedis.io_garageclusters.yaml
+++ b/config/crd/bases/garage.dimedis.io_garageclusters.yaml
@@ -77,6 +77,27 @@ spec:
                 - degraded
                 - dangerous
                 type: string
+              image:
+                description: Image configuration for Garage container
+                properties:
+                  pullPolicy:
+                    default: IfNotPresent
+                    description: PullPolicy is the image pull policy
+                    enum:
+                    - Always
+                    - Never
+                    - IfNotPresent
+                    type: string
+                  repository:
+                    default: dxflrs/garage
+                    description: Repository is the container image repository
+                    type: string
+                  tag:
+                    description: Tag is the container image tag
+                    type: string
+                required:
+                - tag
+                type: object
               ingress:
                 description: Ingress configuration
                 properties:
