--- a/config/samples/garage_v1alpha1_garagecluster_zone_label.yaml
+++ b/config/samples/garage_v1alpha1_garagecluster_zone_label.yaml
@@ -21,6 +21,12 @@ spec:
   # Block size for Garage data blocks
   blockSize: "1Mi"
 
+  # Container image configuration
+  image:
+    repository: "dxflrs/garage"
+    tag: "v2.1.0"
+    pullPolicy: IfNotPresent
+
   # Persistence configuration
   persistence:
     data:
