[github] fix: e2e test conflict with local kind dir

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -19,9 +19,9 @@ jobs:
 
       - name: Install the latest version of kind
         run: |
-          curl -Lo ./kind https://kind.sigs.k8s.io/dl/latest/kind-linux-amd64
-          chmod +x ./kind
-          sudo mv ./kind /usr/local/bin/kind
+          curl -Lo ./kind.bin https://kind.sigs.k8s.io/dl/latest/kind-linux-amd64
+          chmod +x ./kind.bin
+          sudo mv ./kind.bin /usr/local/bin/kind
 
       - name: Verify kind installation
         run: kind version
