--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: docker-registry.dimedis.de/garage-operator
-  newTag: dev
+  newName: ghcr.io/dimedis-gmbh/garage-operator
+  newTag: v0.5.0
