--- a/.github/workflows/test-chart.yml
+++ b/.github/workflows/test-chart.yml
@@ -19,9 +19,9 @@ jobs:
 
       - name: Install the latest version of kind
         run: |
-          curl -Lo ./kind https://kind.sigs.k8s.io/dl/latest/kind-linux-amd64
-          chmod +x ./kind
-          sudo mv ./kind /usr/local/bin/kind
+          curl -Lo ./kind.bin https://kind.sigs.k8s.io/dl/latest/kind-linux-amd64
+          chmod +x ./kind.bin
+          sudo mv ./kind.bin /usr/local/bin/kind
 
       - name: Verify kind installation
         run: kind version
@@ -46,35 +46,35 @@ jobs:
         run: |
           helm lint ./dist/chart
 
-# TODO: Uncomment if cert-manager is enabled
-#      - name: Install cert-manager via Helm
-#        run: |
-#          helm repo add jetstack https://charts.jetstack.io
-#          helm repo update
-#          helm install cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace --set crds.enabled=true
-#
-#      - name: Wait for cert-manager to be ready
-#        run: |
-#          kubectl wait --namespace cert-manager --for=condition=available --timeout=300s deployment/cert-manager
-#          kubectl wait --namespace cert-manager --for=condition=available --timeout=300s deployment/cert-manager-cainjector
-#          kubectl wait --namespace cert-manager --for=condition=available --timeout=300s deployment/cert-manager-webhook
+      # TODO: Uncomment if cert-manager is enabled
+      #      - name: Install cert-manager via Helm
+      #        run: |
+      #          helm repo add jetstack https://charts.jetstack.io
+      #          helm repo update
+      #          helm install cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace --set crds.enabled=true
+      #
+      #      - name: Wait for cert-manager to be ready
+      #        run: |
+      #          kubectl wait --namespace cert-manager --for=condition=available --timeout=300s deployment/cert-manager
+      #          kubectl wait --namespace cert-manager --for=condition=available --timeout=300s deployment/cert-manager-cainjector
+      #          kubectl wait --namespace cert-manager --for=condition=available --timeout=300s deployment/cert-manager-webhook
 
-# TODO: Uncomment if Prometheus is enabled
-#      - name: Install Prometheus Operator CRDs
-#        run: |
-#          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-#          helm repo update
-#          helm install prometheus-crds prometheus-community/prometheus-operator-crds
-#
-#      - name: Install Prometheus via Helm
-#        run: |
-#          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-#          helm repo update
-#          helm install prometheus prometheus-community/prometheus --namespace monitoring --create-namespace
-#
-#      - name: Wait for Prometheus to be ready
-#        run: |
-#          kubectl wait --namespace monitoring --for=condition=available --timeout=300s deployment/prometheus-server
+      # TODO: Uncomment if Prometheus is enabled
+      #      - name: Install Prometheus Operator CRDs
+      #        run: |
+      #          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+      #          helm repo update
+      #          helm install prometheus-crds prometheus-community/prometheus-operator-crds
+      #
+      #      - name: Install Prometheus via Helm
+      #        run: |
+      #          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+      #          helm repo update
+      #          helm install prometheus prometheus-community/prometheus --namespace monitoring --create-namespace
+      #
+      #      - name: Wait for Prometheus to be ready
+      #        run: |
+      #          kubectl wait --namespace monitoring --for=condition=available --timeout=300s deployment/prometheus-server
 
       - name: Install Helm chart for project
         run: |
