--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,6 +77,9 @@ jobs:
       - name: Generate manifests
         run: make manifests
 
+      - name: Generate Helm Chart
+        run: make generate-helm-chart
+
       - name: Build Kustomize installer
         env:
           IMG: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
